<?xml version="1.0" encoding="utf-8"?> 
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" 
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"	
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@android:color/white">
	
   	<TableLayout 
		android:id="@+id/aboutLayout"			
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"  
		android:paddingTop="20dip"
		android:stretchColumns="1">			
		
	    <TableRow
			android:layout_height="wrap_content"
			android:layout_width="wrap_content">
			
		   	<ws.wiklund.guides.util.MyAdView 
				android:id="@+id/adView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
		        android:layout_gravity="center"
				ads:adUnitId="@string/publisher_id"
				ads:adSize="BANNER"
				ads:loadAdOnCreate="false" 
				android:layout_span="2" />			 	    		    
		</TableRow>
   	    
		<TableRow>			
			<ImageView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:background="@drawable/icon" 
				android:scaleType="centerCrop" />
	   		
			<TableLayout 
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent"  
				android:stretchColumns="1">			
			
				<TableRow>
					<TextView
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:singleLine="true"
					    android:text="@string/app_name"
					    android:textSize="25sp"
					    android:textStyle="bold" />
				</TableRow>
			    			
				<TableRow>
					<TextView
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_gravity="right"
					    android:singleLine="true"
					    android:text="@string/app_by"
					    android:textSize="10sp" />
				</TableRow>
			</TableLayout>		
		</TableRow>
				
		<TableRow
		    android:id="@+id/donate"
		    android:paddingTop="10dip">
			<!-- Used from inside code -->
		</TableRow>
		
		<TableRow>
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:paddingLeft="10dip"
				android:layout_span="2" 
				android:text="@string/systembolaget" />	
		</TableRow>
		
		<TableRow>
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dip"
				android:layout_span="2" 
				android:text="@string/aboutIcons" />	
		</TableRow>
		
		<TableRow>			
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:paddingLeft="10dip"
				android:layout_span="2" 
				android:text="@string/aboutOxygen" />	
		</TableRow>

		<TableRow>
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:paddingLeft="10dip"
				android:layout_span="2" 
				android:text="@string/aboutVisualpharm" />	
		</TableRow>

		<TableRow>
			<TextView 
			    android:id="@+id/eula"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dip"				
				android:layout_span="2" 
			    /> 
		</TableRow>
					
		<TableRow>
			<TextView
    		    android:id="@+id/version"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="10dip"
				android:layout_span="2" 
				/>	
		</TableRow>
		
	    <TableRow
			android:layout_height="wrap_content"
			android:layout_width="wrap_content">
			
		   	<ws.wiklund.guides.util.MyAdView 
				android:id="@+id/adView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
		        android:layout_gravity="center"
				ads:adUnitId="@string/publisher_id"
				ads:adSize="BANNER"
				ads:loadAdOnCreate="false" 
				android:layout_span="2" />			 	    		    
		</TableRow>
		
	</TableLayout>
</ScrollView>		