<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"	
	android:id="@+id/ModifyScrollView"
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent"
	android:background="@android:color/white" >
	
	<TableLayout 
		android:id="@+id/TableLayoutModify" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"  
		android:stretchColumns="1">

	    <TableRow
			android:layout_height="wrap_content"
			android:layout_width="wrap_content">
			
		   	<ws.wiklund.guides.util.MyAdView 
				android:id="@+id/adView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				ads:adUnitId="@string/publisher_id"
				ads:adSize="BANNER"
				ads:loadAdOnCreate="false" 
				android:layout_span="2" 
				android:layout_weight="1" />			 	    		    
		</TableRow>
	    	    		
		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" 
			android:paddingBottom="10dip">					

			<ImageButton
				android:id="@+id/Image_thumbUrl"
				android:layout_width="100dp"
				android:layout_height="100dp"
				android:scaleType="fitCenter" 
				android:src="@drawable/camera"
				android:onClick="changePicture" />
		    
			<TextView 
				android:id="@+id/Text_no"
				android:layout_height="100dp"
				android:layout_width="fill_parent"	
				android:singleLine="true" 
				android:gravity="right" 
				android:layout_weight="1" />			 
		</TableRow>
		
		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<TextView 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"	
				android:singleLine="true" 
				android:text="@string/name_hint" />			 
		    			    
			<EditText 
				android:id="@+id/Edit_name"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:hint="@string/name_hint"
				android:layout_weight="1" />
		</TableRow>					
					
		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<Spinner 
				android:id="@+id/Spinner_type"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"	
				android:layout_span="2"	
				android:layout_weight="1" />			 	    
		</TableRow>					
						
		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<ImageView 
				android:id="@+id/Image_country_thumbUrl"
				android:layout_width="29dp"
				android:layout_height="17dp" 
				android:padding="3dip"/>
	   		
			<AutoCompleteTextView 
				android:id="@+id/Edit_country"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:hint="@string/country_hint"
				android:layout_weight="1" 
				android:completionThreshold="1" />			 
		</TableRow>
					
		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<TextView 
				android:id="@+id/lbl_year"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"	
				android:singleLine="true" 
				android:text="@string/year" />			 
		    			    
		 	<Spinner 
				android:id="@+id/Spinner_year"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="1" />			 
		</TableRow>					

		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<TextView 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"	
				android:singleLine="true" 
				android:text="@string/strength" />			 
		    			    
			<Spinner 
				android:id="@+id/Spinner_strength"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="1" />			 
		</TableRow>					

		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<TextView 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"	
				android:singleLine="true" 
				android:text="@string/price" />			 
		    			    
			<EditText 
				android:id="@+id/Edit_price"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:hint="@string/price"
				android:layout_weight="1" />
		</TableRow>					
		
		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<TextView 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"	
				android:singleLine="true" 
				android:text="@string/producer_hint" />			 
		    			    
			<EditText 
				android:id="@+id/Edit_producer"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:hint="@string/producer_hint"
				android:layout_weight="1" />			 
		</TableRow>					

		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<TextView 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"	
				android:singleLine="true" 
				android:text="@string/provider_hint" />			 
		    			    
			<EditText 
				android:id="@+id/Edit_provider"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:hint="@string/provider_hint"
				android:layout_weight="1" />			 
		</TableRow>					
		
		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<TextView 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"	
				android:singleLine="true" 
				android:text="@string/usage_hint" />			 
		    						
		    <EditText 
				android:id="@+id/Edit_usage"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:hint="@string/usage_hint" 
				android:layout_weight="1" />			 
		</TableRow>					
											
		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<TextView 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"	
				android:singleLine="true" 
				android:text="@string/taste_hint" />			 
		    			    
			<EditText 
				android:id="@+id/Edit_taste"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:hint="@string/taste_hint"
				android:layout_weight="1" />			 
		</TableRow>					
														
		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<TextView
			    android:id="@+id/Text_category"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"	
				android:singleLine="true" 
				android:text="@string/category" />			 
		    			    
			<Spinner 
				android:id="@+id/Spinner_category"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="1" />			 
		</TableRow>					
				
		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<TextView
			    android:id="@+id/Text_comment"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"	
				android:singleLine="true" 
				android:text="@string/comment_hint" />			 
		    			    
			<EditText 
				android:id="@+id/Edit_comment"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:hint="@string/comment_hint"
				android:lines="5"
				android:gravity="top|left" 
				android:inputType="textMultiLine"
    			android:scrollHorizontally="false"				
				android:layout_weight="1" />
		</TableRow>							

		<TableRow
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content" >					
			<TextView 
				android:id="@+id/Text_added"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"	
				android:singleLine="true"
				android:gravity="right" 
				android:layout_span="2" 
				android:layout_weight="1" />			 
		</TableRow>					

	    <TableRow
			android:layout_height="wrap_content"
			android:layout_width="wrap_content">
			
		   	<ws.wiklund.guides.util.MyAdView 
				android:id="@+id/adView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				ads:adUnitId="@string/publisher_id"
				ads:adSize="BANNER"
				ads:loadAdOnCreate="false" 
				android:layout_span="2" 
				android:layout_weight="1" />			 	    		    
		</TableRow>
			
	</TableLayout>	
</ScrollView>
